@@ -1,6 +1,8 @@
 Version 4.1-3
 
  o Handle xlevels=n argument correctly in Effect() (fixing bug reported by Gerrit Eichner).
+ 
+ o Add col argument to effectsTheme(), mostly to accommodate colorblind-friendly palette (suggestion of Sercan Kahveci).
 
 Version 4.1-2
 
